force-app/main/default/objects/Opportunity/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <length>15</length>
    <type>Text</type>
</CustomField>