force-app/main/default/objects/Opportunity/fields/RichTextArea__c.field-meta.xml
<CustomField>
    <fullName>RichTextArea__c</fullName>
    <label>RichTextArea</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>