force-app/main/default/objects/Opportunity/fields/SourceBy__c.field-meta.xml
<CustomField>
    <fullName>SourceBy__c</fullName>
    <label>SourceBy</label>
    <length>225</length>
    <type>Text</type>
</CustomField>