force-app/main/default/objects/Opportunity/validationRules/TestNewRule.validationRule-meta.xml
<ValidationRule>
    <fullName>TestNewRule</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE( IsClosed ) = True</errorConditionFormula>
    <errorMessage>Test Close</errorMessage>
</ValidationRule>